# agent-workspace-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  auth.py  cloudbuild.yaml  db.py  main.py  pyproject.toml
app/: config.py  dependencies.py  main.py  middleware.py  schemas.py
app/models/: schemas.py
app/routers/: account.py  auth.py  snapshots.py  workspaces.py  workspaces_with_agent.py
app/services/: k8s.py  sandbox.py
k8s/: deployment.yaml  service.yaml
tests/: test_account.py  test_auth.py  test_db.py  test_endpoints.py
utils/: auth.py  db.py
