[project]
name = "agent-workspace-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agentic-sandbox",
    "fastapi[standard]>=0.129.0",
    "kubernetes>=30.1.0",
    "google-auth>=2.0.0",
    "PyJWT>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "cloud-sql-python-connector[asyncpg]>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
agentic-sandbox = { git = "https://github.com/kubernetes-sigs/agent-sandbox.git", subdirectory = "clients/python/agentic-sandbox-client", rev = "v0.1.1" }
